<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <variable
            name="productListViewModel"
            type="com.personal.flupertest.view.viewmodel.ProductViewModel" />
    </data>

    <LinearLayout xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_5sdp"
            tools:ignore="MissingConstraints">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="false"
                android:orientation="horizontal"
                tools:ignore="MissingConstraints">

                <ImageView
                    android:id="@+id/icProductImage"
                    android:layout_width="@dimen/_100ssp"
                    android:layout_height="@dimen/_100ssp" />

                <LinearLayout
                    android:id="@+id/llProductItem"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="@dimen/_10sdp"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/_2sdp"
                        android:orientation="horizontal"
                        android:weightSum="2"
                        tools:ignore="MissingConstraints">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/name"
                            android:textSize="@dimen/_12ssp" />

                        <TextView
                            android:id="@+id/tvProdName"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:textSize="@dimen/_12ssp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/_2sdp"
                        android:orientation="horizontal"
                        android:weightSum="2"
                        tools:ignore="MissingConstraints">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/description"
                            android:textSize="@dimen/_12ssp" />

                        <TextView
                            android:id="@+id/tvProdDescription"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:textSize="@dimen/_12ssp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/_2sdp"
                        android:orientation="horizontal"
                        android:weightSum="2"
                        tools:ignore="MissingConstraints">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/regular_price"
                            android:textSize="@dimen/_12ssp" />

                        <TextView
                            android:id="@+id/tvProdRegPrice"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:textSize="@dimen/_12ssp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/_2sdp"
                        android:orientation="horizontal"
                        android:weightSum="2"
                        tools:ignore="MissingConstraints">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/sale_price"
                            android:textSize="@dimen/_12ssp" />

                        <TextView
                            android:id="@+id/tvProdSalePrice"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:textSize="@dimen/_12ssp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/_2sdp"
                        android:orientation="horizontal"
                        android:weightSum="2"
                        tools:ignore="MissingConstraints">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/colors"
                            android:textSize="@dimen/_12ssp" />

                        <TextView
                            android:id="@+id/tvProdColor"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:textSize="@dimen/_12ssp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/_2sdp"
                        android:orientation="horizontal"
                        android:weightSum="2"
                        tools:ignore="MissingConstraints">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/stores"
                            android:textSize="@dimen/_12ssp" />

                        <TextView
                            android:id="@+id/tvProdStores"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:textSize="@dimen/_12ssp" />
                    </LinearLayout>
                </LinearLayout>

            </LinearLayout>

        </androidx.cardview.widget.CardView>
    </LinearLayout>
</layout>